Update
Some Fix Combat sync